issue #65 re-formatting & minor code cleaning