@@ -1,8 +1,6 @@
 package com.github.aha.sat.core.mapper;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Value;
@@ -15,15 +13,15 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 @SpringBootApplication
 public class MapperApplication {
 
-	@Value("classpath:/users.json")
-	private Resource usersJsonResource;
+    @Value("classpath:/users.json")
+    private Resource usersJsonResource;
 
-	@Bean
-	List<UserDTO> jsonUsers(ObjectMapper objectMapper) throws IOException {
-		try (var inputStream = usersJsonResource.getInputStream()) {
-			UserDTO[] payloadUsers = objectMapper.readValue(inputStream, UserDTO[].class);
-			return Collections.unmodifiableList(Arrays.asList(payloadUsers));
-		}
-	}
+    @Bean
+    List<UserDTO> jsonUsers(ObjectMapper objectMapper) throws IOException {
+        try (var inputStream = usersJsonResource.getInputStream()) {
+            UserDTO[] payloadUsers = objectMapper.readValue(inputStream, UserDTO[].class);
+            return List.of(payloadUsers);
+        }
+    }
 
 }
